CHANGES.txt - 2008-05-20
------------------------

CHANGES IN CUPS V1.4b1

	- The PPD compiler now supports conditional directives
	  (STR #2636)
	- The ppdc utility now supports a "-t" option to test PPD
	  files (STR #2739)
	- The ppdc utility now supports a "-m" option to use the
	  ModelName value as the output filename.
	- The ppdc utility now supports a FileName directive to
	  set an alternate output filename (STR #2740)
	- The side-channel API now supports SNMP queries for the
	  standard network backends.
	- Added a PageLogFormat directive to the cupsd.conf file to
	  control the format of lines in the page_log file.
	- Filters can now send PPD: messages to stderr to set PPD
	  keywords like DefaultPageSize while a job is printing.
	- Added a mdns backend for discovery and printing to printers
	  that advertise themselves via DNS-SD (Bonjour)
	- The ipp, lpd, and socket backends now support DNS-SD service
	  name resolution.
	- The scheduler now uses a single shared file descriptor for
	  all DNS-SD registrations (STR #2674)
	- The ipp, lpd, and socket backends now support SNMP-based
	  page accounting and supply level monitoring (STR #1655)
	- Added support for cupsPJLDisplay attribute to control what
	  PJL commands are used to display the job information.
	- Driver information files can now be installed in
	  /Library/Printers/PPDs.drv on Mac OS X.
	- The CUPS image library now supports reading images larger
	  than 2GB.
	- The scheduler now delays writing config and state files to
	  reduce disk activity (STR #2684)
	- The CUPS-Get-Devices operation now supports the
	  exclude-schemes and timeout attributes to control which
	  backends are polled and for how long.
	- The cups-deviced helper application now runs backends in
	  parallel to get the list of devices faster.
	- Added --enable-pap configure option.
	- The default cupsd.conf file now includes an "authenticated"
	  policy which requires authentication for remote print jobs.